<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerFragment">


    <TextView
        android:id="@+id/recipeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:text="@string/instructions"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/cookTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:layout_marginStart="20sp"
        android:text="@string/timer"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="VisualLintOverlap" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="150sp"
        android:gravity="center">

        <TextView
            android:id="@+id/blueTextView"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/adjust_the_timer"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <SeekBar
            android:id="@+id/blueSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:progress="255" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="700dp">

        <Button
            android:id="@+id/startButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/start" />

        <Button
            android:id="@+id/pauseButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/pause" />

        <Button
            android:id="@+id/resetButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>
</FrameLayout>