<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:text="@string/welcome_to_your_culinary_journey"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:text="@string/welcomeMsg"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/culinaryImg"
        android:layout_width="215dp"
        android:layout_height="171dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/culinaryimage"
        android:src="@mipmap/culinary_round"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/cookingTipTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="480dp"
        android:text="@string/cookingTipTitle"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:textStyle="bold" />

</FrameLayout>
